# tail

./: .travis.yml  CMakeLists.txt
examples/: 02_bag.cpp  CMakeLists.txt
include/ecosnail/: tail.hpp
include/ecosnail/tail/: bag.hpp  identifier.hpp  ith.hpp  key_iterator.hpp  range.hpp  traits.hpp  value_iterator.hpp
tests/: CMakeLists.txt  iterator_test.cpp  range_test.cpp  traits_test.cpp
